--- a/htm/qs_dive.htm
+++ b/htm/qs_dive.htm
@@ -1,8 +1,13 @@
 <h1>Dive Operations</h1>
-<p align = "center"><img src ="../../PAM/images/con_view.png" width="600">
-<p>Our Cockpit software allows you to monitor the status of all connected PAM devices in realtime. First click the <b>Maintenance and Diagnostic</b> button
-on the launch bar in Cockpit. From here press the <b>show communications diagnostic window</b> button on the service bay screen, and the
-screen above will appear, allowing you to view data on your attached PAM devices.</p>
+<p align = "center"><img src ="../../PAM/images/con_diag.png" width="550" height = "400" name = "view">
+<p>Our Cockpit software allows you to monitor the status of all connected PAM devices in realtime.</p>
+<ul>
+	<li><a name = "maintenance" onmouseover = "view.src=diagh.src"
+onmouseout = "reset()"> First click the <b>Maintenance and Diagnostic</b> button
+on the launch bar in Cockpit.<img src="../../required/images/icon_hand.gif"></a></li> 
+	<li><a name "communications" onmouseover = "view.src=comms.src" onmouseout = "reset()">From here press the <b>show communications diagnostic window</b> button on the service bay screen, and the
+screen above will appear, allowing you to view data on your attached PAM devices.<img src="../../required/images/icon_hand.gif"></a></li>
+</ul>
 
 <p>In most cases, how to operate your device during a dive will be included in the devices operating manual.
 Instructions for how to operate all devices compatible with the PAM during a dive are outside the scope of this document,
