--- a/htm/qs_.htm
+++ b/htm/qs_.htm
@@ -7,8 +7,8 @@
 <h2>Topics in this Section</h2>
 <ul>
   <li><a href="qs_safety.html">Safety First</a></li>
-  <li><a href="qs_components.html">System Components</a></li>
-  <li><a href="qs_predive.html">Pre-Dive Preparations</a></li>
+  <li><a href="qs_components.html">PAM Components</a></li>
+  <li><a href="qs_predive.html">Quick Setup</a></li>
   <li><a href="qs_dive.html">Dive Operations</a></li>
-  <li><a href="qs_postdive.html">Post-Dive Operations</a></li>
+  <li><a href="qs_postdive.html">Removal and Care</a></li>
   </ul>
