--- a/htm/qs_dive.htm
+++ b/htm/qs_dive.htm
@@ -1,14 +1,8 @@
 <h1>Dive Operations</h1>
-<p align = "center"><img src ="../../PAM/images/con_diag.png" width="550" height = "400" name = "view">
-<p>Our Cockpit software allows you to monitor the status of all connected PAM devices in realtime.</p>
-<ul>
-	<li><a name = "maintenance" onmouseover = "view.src=diagh.src"
-onmouseout = "reset()"> First click the <b>Maintenance and Diagnostic</b> button
-on the launch bar in Cockpit.<img src="../../required/images/icon_hand.gif"></a></li> 
-	<li><a name "communications" onmouseover = "view.src=comms.src" onmouseout = "reset()">From here press the <b>show communications diagnostic window</b> button on the service bay screen, and the
-screen above will appear, allowing you to view data on your attached PAM devices.<img src="../../required/images/icon_hand.gif"></a></li>
-</ul>
-
-<p>In most cases, how to operate your device during a dive will be included in the devices operating manual.
-Instructions for how to operate all devices compatible with the PAM during a dive are outside the scope of this document,
-but we encourage you to review any documents pertaining to your device to ensure the proper usage of all equipment.</p>
+<p>PAM and accessory device communications can be monitored using the communication
+diagnostics window. This is available by clicking the <b>Maintenance and Diagnostic</b>
+button on the launch bar and then pressing the <b>show communications diagnostic
+window</b> button on the Service Bay screen.</p>
+<p align = "center"><img src = "../../PAM/images/con_diag.png" name = "view" width = "550" height = "400">
+<p>Each PAM in the system will have its own pane. Pressing the <!--v--><a name = "terminal" onmouseover = "view.src=term.src" onmouseout = "reset()"><!--/v-->Show Terminal<!--v--><img src ="../../required/images/icon_hand.gif"></a><!--/v-->
+button on the individual pane will allow the actual data traffic to be monitored.</p>
