--- a/htm/qs_.htm
+++ b/htm/qs_.htm
@@ -6,9 +6,9 @@
 
 <h2>Topics in this Section</h2>
 <ul>
-  <li><a href="qs_safety.html">Safety First</a></li>
-  <li><a href="qs_components.html">PAM Components</a></li>
-  <li><a href="qs_predive.html">Quick Setup</a></li>
-  <li><a href="qs_dive.html">Dive Operations</a></li>
-  <li><a href="qs_postdive.html">Removal and Care</a></li>
+  <li><!--v--><a href="qs_safety.html"><!--/v-->Safety First</a></li>
+  <li><!--v--><a href="qs_components.html"><!--/v-->PAM Components</a></li>
+  <li><!--v--><a href="qs_predive.html"><!--/v-->Quick Setup</a></li>
+  <li><!--v--><a href="qs_dive.html"><!--/v-->Dive Operations</a></li>
+  <li><!--v--><a href="qs_postdive.html"><!--/v-->Removal and Care</a></li>
   </ul>
