--- a/htm/software_.htm
+++ b/htm/software_.htm
@@ -9,20 +9,21 @@ please continue.</p>
 
 <p>The baud rate and the choice of RS485 or RS232 can be configured using the vrDeviceConfiguration tool. 
 These settings are stored in EEPROM on the PAM.</p>
-<p align = "center"><img src ="../../PAM/images/con_view.png" width = "550" height = "400" name = "view">
+<!--v--><p align = "center"><img src ="../../PAM/images/con_view.png" width = "550" height = "400" name = "view"><!--/v-->
 <ol>
-	<li><a href = "../../PAM/html/equipment_.html"> Connect the PAM to the ROV and power on everything.</a></li>
+	<li><!--v--><a href = "../../PAM/html/equipment_.html"><!--/v--> Connect the PAM to the ROV and power on everything.<!--p-->See the equipment section of this
+	manual for more information on how to correctly connect the PAM.<!--/p--><!--v--></a><!--/v--></li>
 	<li>In the VideoRay Cockpit installation directory there will be a file named vrDeviceConfiguration.exe. Double click it. (The default
-	cockpit installation directory is C:\Program Files(x86)\VideoRay\vrCockpit)</li>
-	<li><a name = "enumerate" onmouseover = "view.src=enumerate.src" onmouseout = "reset()"> The Device Configuration utility will open. 
-	Once you have verified the PAM is receiving power, click the "?" button to enumerate the PAM.<img src="../../required/images/icon_hand.gif"></a></li>
-	<li><a name = "gid" onmouseover = "view.src=gid.src" onmouseout = "reset()"> The default setting for the 
+	cockpit installation directory is C:\Program Files(x86)\VideoRay\vrCockpit)<!--p--><br><p align = "center"><img src ="../../PAM/images/con_view.png" width = "550" height = "400" name = "view"><!--/p--></li>
+	<li><!--v--><a name = "enumerate" onmouseover = "view.src=enumerate.src" onmouseout = "reset()"><!--/v--> The Device Configuration utility will open. 
+	Once you have verified the PAM is receiving power, click the "?" button to enumerate the PAM.<!--v--><img src="../../required/images/icon_hand.gif"></a><!--/v--><!--p--><br><p align = "center"><img src ="../../PAM/images/con_ques.png" width = "550" height = "400" name = "view"><!--/p--></li>
+	<li><!--v--><a name = "gid" onmouseover = "view.src=gid.src" onmouseout = "reset()"><!--/v--> The default setting for the 
 	PAM is a generic protocol adapter which should not
-	be changed. Click the "ID" button to identify the PAM as such.<img src="../../required/images/icon_hand.gif"></a></li>
-	<li><a name = "rs485" onmouseover = "view.src=rs.src" onmouseout= "reset()" >To set the PAM to be RS485 capable, click the dropdown menu next to
-	"Device RS485" and select "Yes".<img src="../../required/images/icon_hand.gif"></a></li>
-	<li><a name = "consav" onmouseover = "view.src=consav.src" onmouseout = "reset()">Press the Save Button to save the Accessory Device file for cockpit to use.<img src = "../../required/images/icon_hand.gif"></a></li>
-	<li><a name = "condl" onmouseover = "view.src=condl.src" onmouseout = "reset()">Click the download button.<img src ="../../required/images/icon_hand.gif"></a></li>
+	be changed. Click the "ID" button to identify the PAM as such.<!--v--><img src="../../required/images/icon_hand.gif"><!--/v--></a><!--p--><br><p align = "center"><img src ="../../PAM/images/con_id.png" width = "550" height = "400" name = "view"><!--/p--></li>
+	<li><!--v--><a name = "rs485" onmouseover = "view.src=rs.src" onmouseout= "reset()"><!--/v-->To set the PAM to be RS485 capable, click the dropdown menu next to
+	"Device RS485" and select "Yes".<!--v--><img src="../../required/images/icon_hand.gif"></a><!--/v--><!--p--><p align = "center"><img src ="../../PAM/images/con_rs.png" width = "550" height = "400" name = "view"><!--/p--></li>
+	<li><!--v--><a name = "consav" onmouseover = "view.src=consav.src" onmouseout = "reset()"><!--/v-->Press the Save Button to save the Accessory Device file for cockpit to use.<!--v--><img src = "../../required/images/icon_hand.gif"></a><!--/v--><!--p--><p align = "center"><img src ="../../PAM/images/con_save.png" width = "550" height = "400" name = "view"><!--/p--></li>
+	<li><!--v--><a name = "condl" onmouseover = "view.src=condl.src" onmouseout = "reset()"><!--/v-->Click the download button.<!--v--><img src ="../../required/images/icon_hand.gif"></a><!--/v--><!--p--><p align = "center"><img src ="../../PAM/images/con_dl.png" width = "550" height = "400" name = "view"><!--/p--></li>
 </ol>
 <h2>Cockpit Configuration</h2>
 <p>Cockpit requires an accessory device file to be installed to use PAM.</p>
@@ -43,11 +44,21 @@ file is formatted as such:</p>
 <p>The PortName field designates which serial port will be used to relay the data.  
 This can be a real or virtual comm port.  The BaudRate field sets the baud rate of the Relay port.</p>
 <h2>Cockpit Diagnostics</h2>
-<p>PAM and accessory device communications can be monitored using the communication
-diagnostics window. This is available by clicking the <b>Maintenance and Diagnostic</b>
-button on the launch bar and then pressing the <b>show communications diagnostic
-window</b> button on the Service Bay screen.</p>
-<p align = "center"><img src = "../../PAM/images/con_diag.png" name = "viewt" width = "550" height = "400">
-<p>Each PAM in the system will have its own pane. Pressing the <a name = "terminal" onmouseover = "viewt.src=term.src" onmouseout = "reset_t()">Show Terminal<img src ="../../required/images/icon_hand.gif"></a>
-button on the individual pane will allow the actual data traffic to be monitored.</p>
+<p align = "center"><img src ="../../PAM/images/con_diag.png" width="550" height = "400" name = "viewt">
+<p>Our Cockpit software allows you to monitor the status of all connected PAM devices in realtime.</p>
+<ul>
+	<li><!--v--><a name = "maintenance" onmouseover = "viewt.src=diagh.src"
+onmouseout = "resett()"><!--/v--> First click the Maintenance and Diagnostic button
+on the launch bar in Cockpit.<!--v--><img src="../../required/images/icon_hand.gif"></a><!--/v--></li> </ul>
+<!--p--><p align = "center"><img src = "../../pam/images/diag_s1.png" width = "550" height = "400"></p><!--/p-->
+	<ul><li><!--v--><a name "communications" onmouseover = "viewt.src=comms.src" onmouseout = "resett()"><!--/v-->From here press the show communications diagnostic window button on the service bay screen, and the
+screen above will appear, allowing you to view data on your attached PAM devices.<!--v--><img src="../../required/images/icon_hand.gif"></a><!--/v--></li></ul>
+
+<!--p--><p align = "center"><img src = "../../pam/images/diag_s2.png" width = "550" height = "400"></p><!--/p-->
+
+
+<p>In most cases, how to operate your device during a dive will be included in the devices operating manual.
+Instructions for how to operate all devices compatible with the PAM during a dive are outside the scope of this document,
+but we encourage you to review any documents pertaining to your device to ensure the proper usage of all equipment.</p>
+
 
