--- a/htm/software_.htm
+++ b/htm/software_.htm
@@ -11,7 +11,8 @@ please continue.</p>
 These settings are stored in EEPROM on the PAM.</p>
 <!--v--><p align = "center"><img src ="../../PAM/images/con_view.png" width = "550" height = "400" name = "view"><!--/v-->
 <ol>
-	<li><!--v--><a href = "../../PAM/html/equipment_.html"><!--/v--> Connect the PAM to the ROV and power on everything.<!--p-->See the equipment section of this
+	
+	<li><!--v--><a style="cursor:pointer" href = "../../PAM/html/equipment_.html"><!--/v--> Connect the PAM to the ROV and power on everything.<!--p-->See the equipment section of this
 	manual for more information on how to correctly connect the PAM.<!--/p--><!--v--></a><!--/v--></li>
 	<li>In the VideoRay Cockpit installation directory there will be a file named vrDeviceConfiguration.exe. Double click it. (The default
 	cockpit installation directory is C:\Program Files(x86)\VideoRay\vrCockpit)<!--p--><br><p align = "center"><img src ="../../PAM/images/con_view.png" width = "550" height = "400" name = "view"><!--/p--></li>
@@ -24,6 +25,7 @@ These settings are stored in EEPROM on the PAM.</p>
 	"Device RS485" and select "Yes".<!--v--><img src="../../required/images/icon_hand.gif"></a><!--/v--><!--p--><p align = "center"><img src ="../../PAM/images/con_rs.png" width = "550" height = "400" name = "view"><!--/p--></li>
 	<li><!--v--><a name = "consav" onmouseover = "view.src=consav.src" onmouseout = "reset()"><!--/v-->Press the Save Button to save the Accessory Device file for cockpit to use.<!--v--><img src = "../../required/images/icon_hand.gif"></a><!--/v--><!--p--><p align = "center"><img src ="../../PAM/images/con_save.png" width = "550" height = "400" name = "view"><!--/p--></li>
 	<li><!--v--><a name = "condl" onmouseover = "view.src=condl.src" onmouseout = "reset()"><!--/v-->Click the download button.<!--v--><img src ="../../required/images/icon_hand.gif"></a><!--/v--><!--p--><p align = "center"><img src ="../../PAM/images/con_dl.png" width = "550" height = "400" name = "view"><!--/p--></li>
+	
 </ol>
 <h2>Cockpit Configuration</h2>
 <p>Cockpit requires an accessory device file to be installed to use PAM.</p>
@@ -62,3 +64,16 @@ Instructions for how to operate all devices compatible with the PAM during a div
 but we encourage you to review any documents pertaining to your device to ensure the proper usage of all equipment.</p>
 
 
+<div id="shown_first" style="display:inline">
+      <a style="cursor:pointer" onclick='plus_minus_swapper("shown_first", "hidden_first")'>
+      + Expand
+      </a>
+</div>
+<div id="hidden_first" style="display:none">
+      <a style="cursor:pointer" onclick='plus_minus_swapper("shown_first", "hidden_first")'>
+      - Collapse</a>
+	  <ol><li>This would normally contain information</li>
+	  <li>but i'm only testing right now</li>
+	  </ol>
+      
+</div>
