--- a/htm/_toc_print.htm
+++ b/htm/_toc_print.htm
@@ -20,6 +20,15 @@
 </li>
     </ul>
 <h2><a href="equipment_.html" style="text-decoration:none">Equipment Guide</a></h2>
+
+  <ul>
+    <li><a href="equipment_whip.html" style="text-decoration:none">9-Pin Whip</a>
+</li>
+    <li><a href="equipment_board.html" style="text-decoration:none">PAM Board</a>
+</li>
+    <li><a href="equipment_connection.html" style="text-decoration:none">Connection</a>
+</li>
+    </ul>
 <h2><a href="software_.html" style="text-decoration:none">Software Guide</a></h2>
       </td>
     <td class="imageCellBorderless">
@@ -36,6 +45,12 @@
     <li></li>
     </ul>
 <h2></h2>
+
+  <ul style="list-style-type:none">
+    <li></li>
+    <li></li>
+    <li></li>
+    </ul>
 <h2></h2>
       </td>
     </tr>
