--- a/htm/_toc_view.htm
+++ b/htm/_toc_view.htm
@@ -31,7 +31,16 @@
     </ul>
     </li>
   <li><a href="equipment_.html">Equipment Guide</a>
+
+  <ul>
+    <li><a href="equipment_whip.html">9-Pin Whip</a>
 </li>
+    <li><a href="equipment_board.html">PAM Board</a>
+</li>
+    <li><a href="equipment_connection.html">Connection</a>
+</li>
+    </ul>
+    </li>
   <li><a href="software_.html">Software Guide</a>
 </li>
   </ul>
