--- a/htm/equipment_board.htm
+++ b/htm/equipment_board.htm
@@ -1,5 +1,5 @@
 <h1>PAM Board</h1>
-<p align = "center"><img src="../../PAM/images/board_base.png" width = "400"></p> 
+<p align = "center"><img src="../../pam/images/board_base.png" width = "400"></p> 
 <p>The PAM board serves as an adapter for your serial device. It splits the input from the 9-pin accessory port and allows your device to connect and interface with the ROV,
 providing unprecedented end user customization.</p>
 <p> The board contains a series of numbered pin connectors. Starting in the top right corner is the first pin, increasing as you move left. This row in the PinOUT side, connecting the
