--- a/htm/equipment_whip.htm
+++ b/htm/equipment_whip.htm
@@ -1,5 +1,5 @@
 <h1>9-Pin Whip</h1>
-<img src="../../PAM/images/9_pin_whip.png" width = "400">
+<img src="../../pam/images/9_pin_whip.png" width = "400">
 <p>The 9-Pin whip included with your VideoRay splits the 9-pin accessory port cable into individual wires, allowing them to be soldered to the PAM board. Every pin is numbered
 on the front and back of the accessory port connector, and terminates in an individual wire at the opposite end of the whip. Each carries
 a different type of data to or from the ROV and is color coded, as follows:</p>
