--- a/htm/equipment_connection.htm
+++ b/htm/equipment_connection.htm
@@ -1,6 +1,6 @@
 <h1>Connecting Your Device</h1>
 <h2>ROV Connection</h2>
-<p align="center"><img src="../../pam/images/board_rov.png" width="400"></p>
+<p align="center"><img src="../../pam/images/board_input.png" width="400"></p>
 <table align = "center">
 	<tr>
 		<th>Arrow Color</th>
