--- a/htm/overview_faq.htm
+++ b/htm/overview_faq.htm
@@ -1,2 +1,24 @@
 <h1>FAQ (Frequently Asked Questions)</h1>
-
+<p>New users typically have some basic questions about the Protocol Adapter Multiplexer(PAM).  Before getting to the details, this section is provided to address the questions asked most frequently, without having to scan through the manual to find the answers.
+This section is not a replacement for the entire manual, and we encourage you to view the rest of the document if you have more detailed questions about the operation of the PAM.</p>
+<ol>
+	
+	<li><h3>What is the PAM?</li></h3>
+	<p>The PAM is the Protocol Adapter Multiplexer. The PAM allows users to configure their own accessories for attachment to the ROV. It consists of two major parts,
+	a connector that splits the individual pins from the accessory port, and the PAM board, which passes communication signals along to the ROV.</p>
+	<li><h3>Who can use the PAM?</p></h3>
+	<p>The PAM is indeed for advanced users and developers. The PAM is designed to create a generic interface for developers to set up their accessories with, and requires
+	the ability to solder and implement electrical communications to use.</p>
+	<li><h3>What type of serial devices can be connected to the PAM?</li></h3>
+	<p>Most devices that use RS485+/- or RX/TX communications and 12 or 24V power can be connected to the PAM.</p>
+	<li><h3>How do I configure a generic PAM?</li></h3>
+	<p>Instructions on how to configure a generic serial device are in the <a href="../../pam/html/equipment_connection.html">equipment guide.</a> More advanced configurations will vary depending on your device.</p>
+	<li><h3>What does the LED on the PAM mean?</li></h3>
+	<p>When solid, the LED indicates that the PAM is receiving power. When blinking, the LED indicates that the PAM is communicating.</p>
+	<li><h3>How can I create an accessory device file?</li></h3>
+	<p>In most cases, the accessory device file will be configured for you at the factory. If you need to configure the device yourself, please see the Device Configuration section of
+	the <a href="../../pam/html/software_.html">software guide.</a></p>
+	<li><h3>Where does the accessory device file go?</li></h3>
+	<p>The default folder for the accessory device file is C:\Users\VideoRay\AppData\Local\VideoRay\AccessoryDevices\ on the computer running cockpit. This many change if the default
+	installation has been modified. </p>
+</ol>
