Glossary and Updated FAQ

--- a/htm/overview_faq.htm
+++ b/htm/overview_faq.htm
@@ -11,6 +11,8 @@ This section is not a replacement for the entire manual, and we encourage you to
 	the ability to solder and implement electrical communications to use.</p>
 	<li><h3>What type of serial devices can be connected to the PAM?</li></h3>
 	<p>Most devices that use RS485+/- or RX/TX communications and 12 or 24V power can be connected to the PAM.</p>
+	<li><h3>How many devices can be connected to the PAM?</li></h3>
+	<p>The PAM can be connected to one device, but multiple PAMS can be connected to a Pro4 system, allowing for multiple custom accessories.</p>
 	<li><h3>How do I configure a generic PAM?</li></h3>
 	<p>Instructions on how to configure a generic serial device are in the <a href="../../pam/html/equipment_connection.html">equipment guide.</a> More advanced configurations will vary depending on your device.</p>
 	<li><h3>What does the LED on the PAM mean?</li></h3>
