--- a/htm/overview_.htm
+++ b/htm/overview_.htm
@@ -1,6 +1,6 @@
 <h1>Generic Protocol Adapter Multiplexer (PAM) Overview</h1>
 
-<p>VideoRay is pleased to introduce the PAM accessory module for your PRO 4 ROV. The PAM
+<p>VideoRay is pleased to introduce the PAM accessory module for your Pro4 ROV. The PAM
 module allows for the connection of a low bandwidth serial device to your PRO 4 via the 9-pin accessory port,
 adding extreme customization and versatility in accessories. Along with our Cockpit software, the PAM accessory acts as a
 transparent accessory for your connected serial device. The PAM supports both 12v and 24V pass through connections.</p>
