Transperancy on images

--- a/htm/equipment_board.htm
+++ b/htm/equipment_board.htm
@@ -2,6 +2,12 @@
 <p align = "center"><img src="../../pam/images/board_base.png" width = "400"></p> 
 <p>The PAM board serves as an adapter for your serial device. It splits the input from the 9-pin accessory port and allows your device to connect and interface with the ROV,
 providing unprecedented end user customization.</p>
-<p> The board contains a series of numbered pin connectors. Starting in the top right corner is the first pin, increasing as you move left. This row in the PinOUT side, connecting the
-ROV's accessory port to the PAM board with the 9-pin whip. Each pin in the board corresponds to one of the pins from the accessory port. The row immediately below that connects the serial device to the board. These two sets are connected to eachother through the board,
+<p align = "center"><img src="../../pam/images/board_color.png" width = "400"></p> 
+<p> The board contains a series of numbered pin connectors. Starting at the black arrow is the first pin, increasing as you move left. This row is the PinOUT side, connecting the
+ROV's accessory port to the PAM board with the 9-pin whip. 
+
+Each pin in the board corresponds to one of the pins from the accessory port. The row immediately below connects the serial device to the board. These two sets are connected to eachother through the board,
 allowing connections to be made between the ROV and serial devices.</p>
+<p align = "center"><img src ="../../pam/images/board_led.png" width = "400"></p>
+<p>The board also contains a small feedback LED. When lit, this LED indicates that the PAM is receiving power. No light means the PAM is not receiving power. A blinking light indicates that the PAM 
+is communicating.</p>
