Cleaned up extra images, fixed required pathways

--- a/htm/equipment_.htm
+++ b/htm/equipment_.htm
@@ -2,7 +2,7 @@
 <p>This portion of the manual gives in depth details on the equipment necessary to successfully operate the PAM and connected devices. The PAM consists of two important items, the
 9-pin which allows access to individual pin functions of the ROV's accessory port, and the PAM circuit board, which divides and interprets the information to allow
 the interface of generic accessories.</p>
-<p><img src="../../pam/images/icon_note.gif"> Before beginning, users should know that some ability to solder is necessary to connect wires to the PAM board. Ensure all soldering equipment is in good
+<p><img src="../../required/images/icon_note.gif"> Before beginning, users should know that some ability to solder is necessary to connect wires to the PAM board. Ensure all soldering equipment is in good
 condition before making any connections to the PAM.</p>
 
 
