--- a/htm/equipment_connection.htm
+++ b/htm/equipment_connection.htm
@@ -39,7 +39,7 @@ begin soldering the wires in the following manner:
 <p>This is the typical attachment. For functions of the other wires stemming from the whip, please see this manuals <a href="../../pam/html/equipment_whip.html">
 section on the 9-pin whip.</a></p>
 <br>
-<img src="../../pam/images/icon_note.gif">	If your device makes use of 24V pass through power, please remember to connect the red wire to pin 3.</p>
+<img src="../../required/images/icon_note.gif">	If your device makes use of 24V pass through power, please remember to connect the red wire to pin 3.</p>
 	
 <h2>Device Connection</h2>
 <p align="center"><img src ="../../pam/images/board_output.png" width = "400"></p>
