--- a/htm/software_.htm
+++ b/htm/software_.htm
@@ -3,7 +3,7 @@
 device, and how to use Cockpit to access information about the PAM board and attached devices.</p>
 
 <h2>Device Configuration</h2>
-<p> <img src = "../../pam/images/icon_note.gif"> Note that in most cases the factory will configure the PAM for costumer use, and users will not
+<p> <img src = "../../required/images/icon_note.gif"> Note that in most cases the factory will configure the PAM for costumer use, and users will not
 need to follow these steps to configure their devices. If you do need to configure your device yourself,
 please continue.</p>
 
@@ -31,7 +31,7 @@ These settings are stored in EEPROM on the PAM.</p>
 <p>Cockpit requires an accessory device file to be installed to use PAM.</p>
 <p>The accessory device file informs Cockpit how to address the PAM(node id) as well as other parameters. If the accessory device file is
 not installed cockpit will not communicate with the PAM and thus communication with the connected device is impossible.</p>
-<p><img src ="../../pam/images/icon_note.gif"> Accessory device files can be created using the vrDeviceConfiguration tool. However,
+<p><img src ="../../required/images/icon_note.gif"> Accessory device files can be created using the vrDeviceConfiguration tool. However,
 a factory configured file is typically provided with the PAM.</p>
 <p> Any factory configured files provided must be installed into the C:\Users\VideoRay\AppData\Local\VideoRay\AccessoryDevices\ directory
 on the computer running cockpit. The accessory device file is an XML file with human readable file names.</p>
