--- a/htm/_toc_print.htm
+++ b/htm/_toc_print.htm
@@ -16,6 +16,8 @@
 <h2><a href="overview_.html" style="text-decoration:none">Product Overview</a></h2>
 
   <ul>
+    <li><a href="requirements_.html" style="text-decoration:none">Requirements</a>
+</li>
     <li><a href="_glossary_print.html" style="text-decoration:none">Glossary</a>
 </li>
     </ul>
@@ -42,6 +44,7 @@
 <h2></h2>
 
   <ul style="list-style-type:none">
+    <li></li>
     <li></li>
     </ul>
 <h2></h2>
