--- a/htm/overview_.htm
+++ b/htm/overview_.htm
@@ -1,7 +1,8 @@
 <h1>Generic Protocol Adapter Multiplexer (PAM) Overview</h1>
 
 <p>VideoRay is pleased to introduce the PAM accessory module for your Pro4 ROV. The PAM
-module allows for the connection of a low bandwidth serial device to your PRO 4 via the 9-pin accessory port,
-adding extreme customization and versatility in accessories. Along with our Cockpit software, the PAM accessory acts as a
-transparent accessory for your connected serial device. The PAM supports both 12v and 24V pass through connections.</p>
+module allows for the connection of a low bandwidth serial device to your PRO 4 via the 9-pin accessory port, without needing to use a spare pair.
+Instead the data to and from the PAM is sent along the communications bus, adding extreme customization and versatility in accessories. 
+Along with VideoRay's Cockpit software, the PAM acts as a transparent interface for your serial devices. The PAM supports a variety of communication protocols, and functions with
+devices running on 12v or 24v power.</p>
 
