--- a/htm/overview_faq.htm
+++ b/htm/overview_faq.htm
@@ -7,14 +7,16 @@ This section is not a replacement for the entire manual, and we encourage you to
 	<p>The PAM is the Protocol Adapter Multiplexer. The PAM allows users to configure their own accessories for attachment to the ROV. It consists of two major parts,
 	a connector that splits the individual pins from the accessory port, and the PAM board, which passes communication signals along to the ROV.</p>
 	<li><h3>Who can use the PAM?</p></h3>
-	<p>The PAM is indeed for advanced users and developers. The PAM is designed to create a generic interface for developers to set up their accessories with, and requires
-	the ability to solder and implement electrical communications to use.</p>
+	<p>The PAM is intended for advanced users and developers. The PAM is designed to create a generic interface for developers to set up their accessories. Customization of the
+	PAM requires certain skills, which are detailed in the <a href="../../pam/html/requirements_.html">requirements</a> portion of this manual.</p>
 	<li><h3>What type of serial devices can be connected to the PAM?</li></h3>
-	<p>Most devices that use RS485+/- or RX/TX communications and 12 or 24V power can be connected to the PAM.</p>
+	<p>Any devices that use RS485 or RS 232 communications and 12 or 24V power can be connected to the PAM.</p>
 	<li><h3>How many devices can be connected to the PAM?</li></h3>
 	<p>The PAM can be connected to one device, but multiple PAMS can be connected to a Pro4 system, allowing for multiple custom accessories.</p>
 	<li><h3>How do I configure a generic PAM?</li></h3>
-	<p>Instructions on how to configure a generic serial device are in the <a href="../../pam/html/equipment_connection.html">equipment guide.</a> More advanced configurations will vary depending on your device.</p>
+	<p>Instructions on how to configure the hardware for a generic serial device are in the <a href="../../pam/html/equipment_connection.html">equipment guide</a> of this manual.
+	Instructions on how to configure the software are in the <a href="../../pam/html/software_.html">software guide</a></p> section of this manual. 
+	More advanced configurations will vary depending on your device.</p>
 	<li><h3>What does the LED on the PAM mean?</li></h3>
 	<p>When solid, the LED indicates that the PAM is receiving power. When blinking, the LED indicates that the PAM is communicating.</p>
 	<li><h3>How can I create an accessory device file?</li></h3>
