--- a/htm/software_.htm
+++ b/htm/software_.htm
@@ -8,21 +8,22 @@ need to follow these steps to configure their devices. If you do need to configu
 please continue.</p>
 
 <p>The baud rate and the choice of RS485 or RS232 can be configured using the vrDeviceConfiguration tool. 
-These settings are stored in EEPROM on the PAM.</p>
+These settings are stored in EEPROM on the PAM. Before beginning, make sure no other devices are connected to the PAM, and only attempt to configure
+one PAM at a time.</p>
 <!--v--><p align = "center"><img src ="../../pam/images/con_view.png" width = "550" height = "400" name = "view"><!--/v-->
 <ol>
 	
 	<li><!--v--><a href = "../../pam/html/equipment_.html"><!--/v--> Connect the PAM to the ROV and power on everything.<!--p-->See the equipment section of this
 	manual for more information on how to correctly connect the PAM.<!--/p--><!--v--></a><!--/v--></li>
 	<li>In the VideoRay Cockpit installation directory there will be a file named vrDeviceConfiguration.exe. Double click it. (The default
-	cockpit installation directory is C:\Program Files(x86)\VideoRay\vrCockpit)<!--p--><br><p align = "center"><img src ="../../pam/images/con_view.png" width = "550" height = "400" name = "view"><!--/p--></li>
+	cockpit installation directory is <span class="folder">C:\Program Files(x86)\VideoRay\vrCockpit</span>)<!--p--><br><p align = "center"><img src ="../../pam/images/con_view.png" width = "550" height = "400" name = "view"><!--/p--></li>
 	<li><!--v--><a name = "enumerate" onmouseover = "view.src=enumerate.src" onmouseout = "reset()"><!--/v--> The Device Configuration utility will open. 
 	Once you have verified the PAM is receiving power, click the "?" button to enumerate the PAM.<!--v--><img src="../../required/images/icon_hand.gif"></a><!--/v--><!--p--><br><p align = "center"><img src ="../../pam/images/con_ques.png" width = "550" height = "400" name = "view"><!--/p--></li>
 	<li><!--v--><a name = "gid" onmouseover = "view.src=gid.src" onmouseout = "reset()"><!--/v--> The default setting for the 
 	PAM is a generic protocol adapter which should not
 	be changed. Click the "ID" button to identify the PAM as such.<!--v--><img src="../../required/images/icon_hand.gif"><!--/v--></a><!--p--><br><p align = "center"><img src ="../../pam/images/con_id.png" width = "550" height = "400" name = "view"><!--/p--></li>
 	<li><!--v--><a name = "rs485" onmouseover = "view.src=rs.src" onmouseout= "reset()"><!--/v-->To set the PAM to be RS485 capable, click the dropdown menu next to
-	"Device RS485" and select "Yes".<!--v--><img src="../../required/images/icon_hand.gif"></a><!--/v--><!--p--><p align = "center"><img src ="../../pam/images/con_rs.png" width = "550" height = "400" name = "view"><!--/p--></li>
+	"Device RS485" and select "Yes". If you are using RS232, leave this setting at "No".<!--v--><img src="../../required/images/icon_hand.gif"></a><!--/v--><!--p--><p align = "center"><img src ="../../pam/images/con_rs.png" width = "550" height = "400" name = "view"><!--/p--></li>
 	<li><!--v--><a name = "consav" onmouseover = "view.src=consav.src" onmouseout = "reset()"><!--/v-->Press the Save Button to save the Accessory Device file for cockpit to use.<!--v--><img src = "../../required/images/icon_hand.gif"></a><!--/v--><!--p--><p align = "center"><img src ="../../pam/images/con_save.png" width = "550" height = "400" name = "view"><!--/p--></li>
 	<li><!--v--><a name = "condl" onmouseover = "view.src=condl.src" onmouseout = "reset()"><!--/v-->Click the download button.<!--v--><img src ="../../required/images/icon_hand.gif"></a><!--/v--><!--p--><p align = "center"><img src ="../../pam/images/con_dl.png" width = "550" height = "400" name = "view"><!--/p--></li>
 	
@@ -33,16 +34,16 @@ These settings are stored in EEPROM on the PAM.</p>
 not installed cockpit will not communicate with the PAM and thus communication with the connected device is impossible.</p>
 <p><img src ="../../required/images/icon_note.gif"> Accessory device files can be created using the vrDeviceConfiguration tool. However,
 a factory configured file is typically provided with the PAM.</p>
-<p> Any factory configured files provided must be installed into the C:\Users\VideoRay\AppData\Local\VideoRay\AccessoryDevices\ directory
+<p> Any factory configured files provided must be installed into the <span class="folder">C:\Users\VideoRay\AppData\Local\VideoRay\AccessoryDevices\</span> directory
 on the computer running cockpit. The accessory device file is an XML file with human readable file names.</p>
 <p>There are two fields which may require user modification, in which case a plain text editor such as notepad can be used. The
 file is formatted as such:</p>
 <pre>
 &lt;PortName&gt;
-	&lt;SimpleName&gt;COM2&lt;/SimpleName>
-	&lt;FriendlyName&gt;COM2&lt;/FriendlyName>
+	&lt;SimpleName&gt;<i>COM2</i>&lt;/SimpleName>
+	&lt;FriendlyName&gt;<i>COM2</i>lt;/FriendlyName>
 &lt;/PortName&gt;
-&lt;BaudRate&gt;9600&lt;/BaudRate&gt; </pre>
+&lt;BaudRate&gt;<i>600</i>&lt;/BaudRate&gt; </pre>
 <p>The PortName field designates which serial port will be used to relay the data.  
 This can be a real or virtual comm port.  The BaudRate field sets the baud rate of the Relay port.</p>
 <h2>Cockpit Diagnostics</h2>
@@ -57,10 +58,5 @@ on the launch bar in Cockpit.<!--v--><img src="../../required/images/icon_hand.g
 screen above will appear, allowing you to view data on your attached PAM devices.<!--v--><img src="../../required/images/icon_hand.gif"></a><!--/v--></li></ul>
 
 <!--p--><p align = "center"><img src = "../../pam/images/diag_s2.png" width = "550" height = "400"></p><!--/p-->
-
-
-<p>In most cases, how to operate your device during a dive will be included in the devices operating manual.
-Instructions for how to operate all devices compatible with the PAM during a dive are outside the scope of this document,
-but we encourage you to review any documents pertaining to your device to ensure the proper usage of all equipment.</p>
 
 
