--- a/htm/software_.htm
+++ b/htm/software_.htm
@@ -41,10 +41,10 @@ on the computer running cockpit. The accessory device file is an XML file with h
 file is formatted as such:</p>
 <pre>
 &lt;PortName&gt;
-	&lt;SimpleName&gt;<i>COM2</i>&lt;/SimpleName>
-	&lt;FriendlyName&gt;<i>COM2</i>lt;/FriendlyName>
+	&lt;SimpleName&gt;<i><span class="folder">COM2</span></i>&lt;/SimpleName>
+	&lt;FriendlyName&gt;<i><span class="folder">COM2</span></i>&lt;/FriendlyName>
 &lt;/PortName&gt;
-&lt;BaudRate&gt;<i>600</i>&lt;/BaudRate&gt; </pre>
+&lt;BaudRate&gt;<i><span class="folder">600</span></i>&lt;/BaudRate&gt; </pre>
 <p>The PortName field designates which serial port will be used to relay the data.  
 This can be a real or virtual comm port.  The BaudRate field sets the baud rate of the Relay port.</p>
 <h2>Cockpit Diagnostics</h2>
