--- a/htm/equipment_board.htm
+++ b/htm/equipment_board.htm
@@ -9,5 +9,5 @@ ROV's accessory port to the PAM board with the 9-pin whip.
 Each pin in the board corresponds to one of the pins from the accessory port. The row immediately below connects the serial device to the board. These two sets are connected to eachother through the board,
 allowing connections to be made between the ROV and serial devices.</p>
 <p align = "center"><img src ="../../pam/images/board_led.png" width = "400"></p>
-<p>The board also contains a small feedback LED. When the board is receiving power, the light will emit a single blink every few seconds. When the board
-is communicating, it will emit a series of blinks every few seconds.</p>
+<p>The board also contains a small feedback LED. The LED will emit a fast double blink when it's bootloader is successful. When the board is receiving power, the light will emit a single blink every few seconds. When the board
+is communicating, it will emit a series of multiple blinks every few seconds.</p>
