Virtual Ports link

--- a/htm/_toc_print.htm
+++ b/htm/_toc_print.htm
@@ -32,6 +32,10 @@
 </li>
     </ul>
 <h2><a href="software_.html" style="text-decoration:none">Software Guide</a></h2>
+
+  <ul>
+    <li><a href="software_config.html" style="text-decoration:none">Software Configuration</a>
+    </ul>
       </td>
     <td class="imageCellBorderless">
 
@@ -55,6 +59,9 @@
     <li></li>
     </ul>
 <h2></h2>
+
+  <ul style="list-style-type:none">
+    <li>    </ul>
       </td>
     </tr>
   </table>
