--- a/htm/_toc_view.htm
+++ b/htm/_toc_view.htm
@@ -44,5 +44,10 @@
     </ul>
     </li>
   <li><a href="software_.html">Software Guide</a>
+
+  <ul>
+    <li><a href="software_config.html">Software Configuration</a>
 </li>
+    </ul>
+    </li>
   </ul>
