Split Software Guide Section

--- a/htm/_toc_view.htm
+++ b/htm/_toc_view.htm
@@ -46,7 +46,16 @@
   <li><a href="software_.html">Software Guide</a>
 
   <ul>
-    <li><a href="software_config.html">Software Configuration</a>
+    <li><a href="software_device.html">Device Configuration</a>
+</li>
+    <li><a href="software_cockpit.html">Cockpit Configuration</a>
+</li>
+    </ul>
+    </li>
+  <li><a href="appendix.html">Appendix</a>
+
+  <ul>
+    <li><a href="../../zcp/html/index.html">Zoom Camera Example</a>
 </li>
     </ul>
     </li>
