--- a/htm/_toc_print.htm
+++ b/htm/_toc_print.htm
@@ -34,7 +34,15 @@
 <h2><a href="software_.html" style="text-decoration:none">Software Guide</a></h2>
 
   <ul>
-    <li><a href="software_config.html" style="text-decoration:none">Software Configuration</a>
+    <li><a href="software_device.html" style="text-decoration:none">Device Configuration</a>
+</li>
+    <li><a href="software_cockpit.html" style="text-decoration:none">Cockpit Configuration</a>
+</li>
+    </ul>
+<h2><a href="appendix.html" style="text-decoration:none">Appendix</a></h2>
+
+  <ul>
+    <li><a href="../../zcp/html/index.html" style="text-decoration:none">Zoom Camera Example</a>
     </ul>
       </td>
     <td class="imageCellBorderless">
@@ -55,6 +63,12 @@
 
   <ul style="list-style-type:none">
     <li></li>
+    <li></li>
+    <li></li>
+    </ul>
+<h2></h2>
+
+  <ul style="list-style-type:none">
     <li></li>
     <li></li>
     </ul>
