Fixing GitHub case mismatch 1

--- a/htm/_toc_print.htm
+++ b/htm/_toc_print.htm
@@ -39,10 +39,10 @@
     <li><a href="software_cockpit.html" style="text-decoration:none">Cockpit Configuration</a>
 </li>
     </ul>
-<h2><a href="appendix.html" style="text-decoration:none">Appendix</a></h2>
+<h2><a href="integration_examples.html" style="text-decoration:none">Integration Examples</a></h2>
 
   <ul>
-    <li><a href="../../zcp/html/index.html" style="text-decoration:none">Zoom Camera Example</a>
+    <li><a href="../../pam_zoom_camera/html/index.html" style="text-decoration:none">Zoom Camera Example</a>
     </ul>
       </td>
     <td class="imageCellBorderless">
