--- a/htm/_toc_view.htm
+++ b/htm/_toc_view.htm
@@ -52,10 +52,10 @@
 </li>
     </ul>
     </li>
-  <li><a href="appendix.html">Appendix</a>
+  <li><a href="integration_examples.html">Integration Examples</a>
 
   <ul>
-    <li><a href="../../zcp/html/index.html">Zoom Camera Example</a>
+    <li><a href="../../pam_zoom_camera/html/index.html">Zoom Camera Example</a>
 </li>
     </ul>
     </li>
