--- a/htm/equipment_.htm
+++ b/htm/equipment_.htm
@@ -1,6 +1,5 @@
 <h1>Equipment Guide</h1>
-<p>This portion of the manual gives in depth details on the equipment necessary to successfully operate the PAM and connected devices. The PAM consists of two important items, the
-9-pin which allows access to individual pin functions of the ROV's accessory port, and the PAM circuit board, which divides and interprets the information to allow
-the interface of generic accessories.</p>
+
+<p>The PAM itself is a small circuit board.  In order to use a PAM, you will need a standard VideoRay 9-pin accessory port whip.  Once configured, the PAM will need to be encapsulated in a water-tight container suitable to withstand the intended depth of operations.</p>
 
 
