--- a/htm/equipment_whip.htm
+++ b/htm/equipment_whip.htm
@@ -1,58 +1,63 @@
 <h1>9-Pin Whip</h1>
-<img src="../../pam/images/9_pin_whip.png" width = "400">
-<p>The 9-Pin whip included with your PAM splits the 9-pin accessory port cable into individual wires, allowing them to be soldered to the PAM board. Every pin is numbered
-on the front and back of the accessory port connector, and terminates in an individual wire at the opposite end of the whip. Each carries
-a different type of data to or from the ROV and is color coded, as follows:</p>
+
+<p><img src="../../pam/images/9_pin_whip.png" width = "400"></p>
+
+<p>The 9-Pin accessory port whip included with your PAM allows you to connect the PAM board to the ROV. Every pin is numbered
+on the front and back of the accessory port connector, and terminates in an individual wire at the opposite end of the whip.  The accessory port whip is color coded as follows:</p>
 
 <table>
-	<tr>
-		<th>Color</th>
-		<th>Pin</th>
-		<th>Function</th>
-	</tr>
-	<tr>
-		<td>Black</td>
-		<td>1</td>
-		<td>Video -</td>
-	</tr>
-	<tr>
-		<td>White</td>
-		<td>2</td>
-		<td>Video +</td>
-	</tr>
-	<tr>
-		<td>Red</td>
-		<td>3</td>
-		<td>24V DC + (30 Watts)</td>
-	</tr>
-	<tr>
-		<td>Green</td>
-		<td>4</td>
-		<td>Aux + (APIC) Connects to tether pin 4 and control panel aux port pin 7	</td>
-	</tr>
-	<tr>
-		<td>Orange</td>
-		<td>5</td>
-		<td>Power Common (Ground)</td>
-	</tr>
-	<tr>
-		<td>Yellow</td>
-		<td>6</td>
-		<td>Aux - (APIC) Connects to tether pin 5 and control panel aux port pin 8</td>
-	</tr>
-	<tr>
-		<td>Blue</td>
-		<td>7</td>
-		<td>(RS-485 -/A) OR (RS 232: RX)</td>
-	</tr>
-	<tr>
-		<td>Grey</td>
-		<td>8</td>
-		<td>(RS-485 +/B) OR (RS 232: TX)</td>
-	</tr>
-	<tr>
-		<td>Brown</td>
-		<td>9</td>
-		<td>12V DC + (30 Watts)</td>
-	</tr>
-</table><br>
+  <tr>
+    <th>Color</th>
+    <th>Pin</th>
+    <th>Function</th>
+    </tr>
+  <tr>
+    <td>Black</td>
+    <td>1</td>
+    <td>Video -</td>
+    </tr>
+  <tr>
+    <td>White</td>
+    <td>2</td>
+    <td>Video +</td>
+    </tr>
+  <tr>
+    <td>Red</td>
+    <td>3</td>
+    <td>24V DC + (30 Watts)</td>
+    </tr>
+  <tr>
+    <td>Green</td>
+    <td>4</td>
+    <td>Aux + (APIC) Connects to tether pin 4 and control panel aux port pin 7	</td>
+    </tr>
+  <tr>
+    <td>Orange</td>
+    <td>5</td>
+    <td>Power Common (Ground)</td>
+    </tr>
+  <tr>
+    <td>Yellow</td>
+    <td>6</td>
+    <td>Aux - (APIC) Connects to tether pin 5 and control panel aux port pin 8</td>
+    </tr>
+  <tr>
+    <td>Blue</td>
+    <td>7</td>
+    <td>(RS-485 -/A) OR (RS 232: RX)</td>
+    </tr>
+  <tr>
+    <td>Grey</td>
+    <td>8</td>
+    <td>(RS-485 +/B) OR (RS 232: TX)</td>
+    </tr>
+  <tr>
+    <td>Brown</td>
+    <td>9</td>
+    <td>12V DC + (30 Watts)</td>
+    </tr>
+ </table><br>
+
+<p>The connections are explained in more detail in the following sections.  The PAM will typically be connected to the whip and the either encased in a water tight container or potted in epoxy to make it water and pressure tolerant.</p>
+
+<p>The accessory is connected to the PAM according to the devices requirements.  This will vary depending upon the device, but a generic example is included in this manual.</p>
