--- a/htm/software_.htm
+++ b/htm/software_.htm
@@ -1,9 +1,7 @@
 <h1>Software Guide</h1>
-<p>This section contains information on how to configure your software setup for your serial
-device, and how to use Cockpit to access information about the PAM board and attached devices.</p>
+
+<p>This section contains information on how to configure the PAM for your serial device, and how to use VideoRay Cockpit to access information about the PAM board and attached devices.</p>
 
 <h2>Virtual Communication Ports</h1>
-<p>The PAM makes use of Cockpits built in virtual port functions. You can learn more about virtual ports from the <a href="http://download.videoray.com/documentation/pro_4/html/cockpit_app.html">Pro 4 manual</a>.
-If you wish to modify the default ports or add new virtual ports, it is highly recommended that you read this section.</p>
 
-
+<p>For pass through communications, the PAM makes use of virtual ports. You can learn more about virtual ports from the <a href="../../pro_4/html/cockpit_app.html">Pro 4 manual</a>.  If you wish to modify the default ports or add new virtual ports, it is highly recommended that you read this section.</p>
