--- a/htm/equipment_connection.htm
+++ b/htm/equipment_connection.htm
@@ -1,104 +1,113 @@
 <h1>Connecting Your Device</h1>
+
 <h2>Device Connection</h2>
+
 <p align="center"><img src ="../../pam/images/board_output.png" width = "400"></p>
+
 <table align = "center">
-	<tr>
-		<th>Pin</th>
-		<th>Arrow Color</th>
-		<th>Function</th>
-	</tr>
-	<tr>
-		<td>3</td>
-		<td>Red</td>
-		<td>24V DC + (30 Watts)</td>
-	</tr>
-	<tr>
-		<td>5</td>
-		<td>Orange</td>
-		<td>Power Common (Ground)</td>
-	</tr>
-	<tr>
-		<td>7</td>
-		<td>Blue</td>
-		<td>RS-485+ OR RS-232 TX</td>
-	</tr>
-	<tr>
-		<td>8</td>
-		<td>Grey</td>
-		<td>RS-485- OR RS-232 RX</td>
-	</tr>
-	<tr>
-		<td>9</td>
-		<td>Brown</td>
-		<td>12V DC + (30 Watts)</td>
-	</tr>
-</table><br>
-<p>The PAM board uses the row of pins
-under the PinOUT set for the connection to serial devices. This is the PinIN side of the board. The following steps will successfully connect your device:</p>
+  <tr>
+    <th>Pin</th>
+    <th>Arrow Color</th>
+    <th>Function</th>
+    </tr>
+  <tr>
+    <td>3</td>
+    <td>Red</td>
+    <td>24V DC + (30 Watts)</td>
+    </tr>
+  <tr>
+    <td>5</td>
+    <td>Orange</td>
+    <td>Power Common (Ground)</td>
+    </tr>
+  <tr>
+    <td>7</td>
+    <td>Blue</td>
+    <td>RS-485+ OR RS-232 TX</td>
+    </tr>
+  <tr>
+    <td>8</td>
+    <td>Grey</td>
+    <td>RS-485- OR RS-232 RX</td>
+    </tr>
+  <tr>
+    <td>9</td>
+    <td>Brown</td>
+    <td>12V DC + (30 Watts)</td>
+    </tr>
+  </table><br>
+
+<p>The PAM board uses the row of pins under the PinIN set for the connection to serial devices. The following steps will successfully connect your device:</p>
+
 <ul>
-	<li>Identify which wires on your device are communications, power, and ground.</li>
-	<li>Connect your device's ground wire to pin 5.</li>
-	<li>Connect your device's communications pins.</li>
-		<ul>	
-			<li>If you are using an RS485 device, the connection order is reversed on this side. Connect your device's RS485+ wire to pin 7. Connect your device's
-			RS485- wire to pin 8.</li>
-			<li>If you are using an RS232 device, connect the TX wire of your device to pin 7. Connect the RX wire to pin 8. </li>
-		</ul>
-	<li>Connect your device's power.</li>
-		<ul>
-			<li>If you are connecting a 12V device, connect your power wire to pin 9.</li>
-			<li>If you are connecting a 24V device, connect your power wire to pin 3.</li>
-		</ul>
-</ul>
-</ul>
+  <li>Identify which wires on your device are communications, power, and ground.</li>
+  <li>Connect your device's ground wire to pin 5.</li>
+  <li>Connect your device's communications pins.
+    <ul>	
+      <li>If you are using an RS-485 device, the connection order is reversed on this side. Connect your device's RS-485+ wire to pin 7. Connect your device's RS-485- wire to pin 8.</li>
+      <li>If you are using an RS-232 device, connect the TX wire of your device to pin 7. Connect the RX wire to pin 8.</li>
+      </ul>
+    </li>
+  <li>Connect your device's power.</li>
+    <ul>
+      <li>If you are connecting a 12 V DC device, connect your power wire to pin 9.</li>
+      <li>If you are connecting a 24 V DC device, connect your power wire to pin 3.</li>
+      </ul>
+    </li>
+  </ul>
+
 <h2>ROV Connection</h2>
+
 <p align="center"><img src="../../pam/images/board_input.png" width="400"></p>
+
 <table align = "center">
-	<tr>
-		<th>Pin</th>
-		<th>Arrow Color</th>
-		<th>Function</th>
-	<tr>
-		<td>3</td>
-		<td>Red</td>
-		<td>24V DC + (30 Watts)</td>
-	</tr>
-	<tr>
-		<td>5</td>
-		<td>Orange</td>
-		<td>Power Common (Ground)</td>
-	</tr>
-	<tr>
-		<td>7</td>
-		<td>Grey</td>
-		<td>RS-485- OR RS-232 RX</td>
-	</tr>
-	<tr>
-		<td>8</td>
-		<td>Blue</td>
-		<td>RS-485+ OR RS-232 TX</td>
-	</tr>
-	<tr>
-		<td>9</td>
-		<td>Brown</td>
-		<td>12V DC + (30 Watts)</td>
-	</tr>
-</table><br>
-<p>Connect the 9-pin whip to the ROV, and isolate the orange, red, gray, blue, and brown wires. Place the board with the pinOut side facing upwards. In this position, the pin numbers
-for the PAM board start at 1 in the upper right and increase towards the left. The diagram above also shows the function of each pin on the board in a color coded fashion. From this position
-begin soldering the wires in the following manner:
+  <tr>
+    <th>Pin</th>
+    <th>Arrow Color</th>
+    <th>Function</th>
+  <tr>
+    <td>3</td>
+    <td>Red</td>
+    <td>24V DC + (30 Watts)</td>
+    </tr>
+  <tr>
+    <td>5</td>
+    <td>Orange</td>
+    <td>Power Common (Ground)</td>
+    </tr>
+  <tr>
+    <td>7</td>
+    <td>Grey</td>
+    <td>RS-485- OR RS-232 RX</td>
+    </tr>
+  <tr>
+    <td>8</td>
+    <td>Blue</td>
+    <td>RS-485+ OR RS-232 TX</td>
+    </tr>
+  <tr>
+    <td>9</td>
+    <td>Brown</td>
+    <td>12V DC + (30 Watts)</td>
+    </tr>
+  </table>
+
+<p>Connect the 9-pin whip to the ROV, and isolate the orange, red, gray, blue, and brown wires. Place the board with the pinOut side facing upwards. In this position, the pin numbers for the PAM board start at 1 in the upper right and increase towards the left. The diagram above also shows the function of each pin on the board in a color coded fashion. From this position begin soldering the wires in the following manner:</p>
+
 <ul>
-	<li>Connect the Orange ground wire to pin 5.</li>
-	<li>Connect the Gray RS485- wire to pin 7.</li>
-	<li>Connect the Blue RS485+ wire to pin 8.</li>
-	<li>Connect the Brown 12V power wire to pin 9.</li>
-	<li>(Optional) If you are using 24V power, connect the Red 24V power wire to pin 3.</li>
-</ul>
+  <li>Connect the Orange ground wire to pin 5.</li>
+  <li>Connect the Gray RS485- wire to pin 7.</li>
+  <li>Connect the Blue RS485+ wire to pin 8.</li>
+  <li>Connect the Brown 12V power wire to pin 9.</li>
+  <li>(Optional) If you are using 24V power, connect the Red 24V power wire to pin 3.</li>
+  </ul>
+
 <p>This is the typical attachment. For functions of the other wires of the whip, please see this manuals <a href="../../pam/html/equipment_whip.html">
 section on the 9-pin whip.</a></p>
-<br>
-<img src="../../required/images/icon_note.gif">	If your device makes use of 24V pass through power, please remember to connect the red wire to pin 3.</p>
+
+<p><img src="../../required/images/icon_note.gif"> You should only connect the accessories positive (+) power lead to either pin 3 or pin 9, but not both.</p>
 
 <h2>Potting</h2>
-<p>Your device's hardware is now set up. Please remember to enclose your device in a waterproof housing before use. If you are using a permanent housing, you may wish to 
-test that your PAM is communicating before placing it in the housing. Proceed to the <a href="../../pam/html/software_.html">software guide</a> to do so.</p>
+
+<p>Your PAM is now set up. Please remember to enclose your device in a waterproof housing before use. If you are using a permanent housing, you may wish to test that your PAM is communicating before placing it in the housing. Proceed to the <a href="../../pam/html/software_.html">software guide</a> to do so.</p>
+
